# vxtoolcli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/commands/: discord.rs  mod.rs  whois.rs
